--- a/website/main.css
+++ b/website/main.css
@@ -10,13 +10,35 @@ html, body {
 	font: 16px "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
-input[type="text"], input[type="password"] {
+a {
+	text-decoration: none;
+	color: #333;
+}
+
+label {
+	display: block;
+}
+
+input[type="text"], input[type="password"], textarea, select {
+	display: block;
+	margin-bottom: 10px;
 	padding: 0 8px;
 	line-height: 36px;
 	font-size: 16px;
 	width: 100%;
 	border: solid 1px #CCC;
 	outline: solid 0px #CCC;
+}
+
+select {
+	max-width: 150px;
+}
+
+textarea {
+	padding: 8px;
+	height: 100px;
+	resize: vertical;
+	line-height: 20px;
 }
 
 input[type="text"]:focus, input[type="password"]:focus {
@@ -61,10 +83,6 @@ input[type="submit"]:hover, button:hover {
 	color: #444;
 }
 
-#login input {
-	margin-bottom: 10px;
-}
-
 #login input[type="submit"] {
 	margin-bottom: 0;
 }
@@ -96,17 +114,39 @@ td {
 	border-bottom-width: 1px;
 }
 
+td.icon {
+	width: 50px;
+}
+
+td.number {
+	text-align: right;
+	width: 75px;
+}
+
 .passed {
-	background-color: #00897B;
+	background: #00897B;
 }
-.passed:hover {
-	background-color: #00e6cf;
-}
+
 .failed {
-	background-color: #ef5350;
+	background: #ef5350;
 }
-.failed:hover {
-	background-color: #f48c8a;
+
+.untested {
+	background: #AAA;
+}
+
+tr.edit {
+	display: none;
+	background: #EEE;
+	color:#333;
+}
+
+tr.edit td {
+	padding: 10px;
+}
+
+tr:target + tr.edit {
+	display: table-row;
 }
 
 error {
